feat: fixing broken test src file path